# PhaseMirror

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  should we put our MVPs in their own repo_.md
cli/: README.md  package.json
cli/src/: index.ts
contracts/: README.md  analog_sovereignty.yaml  governance_bootstrap.py  health_signal.py  knowledge_audit_schema.json  system_invariants.yaml  typed_phase_mirror.py  validation_gates.py  xi_constitution.yaml
contracts/pirtm/: policy.yaml  proof_schema.json
contracts/shared/: __init__.py  constants.py  exceptions.py  merkle_root.py  schema.py  types.py
docs/adr/: ADR-MVP-002-deploy-branch-audit-trail.md  ADR-MVP-004-repo-strategy.md
governance/: ADR-006-quorum-enforcement.md  GOVERNANCE-BRIDGE.md  constitution.py  coupling.py  ledger.py
mcp_server/: README.md  __init__.py  _yaml.py  app.py  audit.py  audit_logger.py  discovery.py  http_transport.py  identity.py  observability.py  server.py  session.py  tool_registry.yaml  tool_registry_validator.py
mcp_server/middleware/: auth.py
mcp_server/tests/: test_gate_f_audit.py  test_gate_f_auth.py  test_gate_f_bootstrap.py  test_gate_f_discovery.py  test_gate_f_http_transport.py  test_gate_f_identity.py  test_gate_f_session.py  test_smoke.py  test_startup_gating.py  test_tool_integrity.py  test_wave3_scaffolding.py
mcp_server/tools/: __init__.py  _rollback_helpers.py  tool_agent_dispatch.py  tool_certify_lever_convergence.py  tool_checkpoint_inventory.py  tool_checkpoint_prune.py  (+22 more)
scripts/: build_binary.sh
tests/: test_constitution.py
(+16 files in other folders)
